[gd_scene load_steps=10 format=3 uid="uid://g8ib4cw163kh"]

[ext_resource type="Texture2D" uid="uid://cdrbwipoeh358" path="res://Assets/Sprites/BattleMenuEdge.png" id="1_f7ntd"]
[ext_resource type="Script" path="res://Scenes/UI/BattleMenu.gd" id="1_ugwm4"]
[ext_resource type="Theme" uid="uid://c5ws7dk51qn2g" path="res://Scenes/UI/DefaultTheme.tres" id="2_yb214"]
[ext_resource type="Texture2D" uid="uid://bedkfpbol3ykq" path="res://Assets/Sprites/ActionUI.png" id="3_rscme"]
[ext_resource type="Texture2D" uid="uid://dykwnvs0qsed6" path="res://Assets/Sprites/ActionUIHover.png" id="4_3at5s"]
[ext_resource type="Texture2D" uid="uid://p32jfiumup0u" path="res://Assets/Sprites/ItemUI.png" id="5_n4ob3"]
[ext_resource type="Texture2D" uid="uid://caud27scu23yb" path="res://Assets/Sprites/ItemUIHover.png" id="6_kn2fc"]
[ext_resource type="Texture2D" uid="uid://b6mt71jgjmeeq" path="res://Assets/Sprites/RunUI.png" id="7_ddjs8"]
[ext_resource type="Texture2D" uid="uid://cqhge8u3gq3lb" path="res://Assets/Sprites/RunUIHover.png" id="8_xtv8p"]

[node name="BattleMenu" type="HBoxContainer"]
custom_minimum_size = Vector2(184, 24)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -32.0
offset_right = 92.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_ugwm4")

[node name="LeftEdge" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_f7ntd")
stretch_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_yb214")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ActionButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_rscme")
texture_pressed = ExtResource("3_rscme")
texture_hover = ExtResource("4_3at5s")
texture_focused = ExtResource("4_3at5s")
stretch_mode = 3

[node name="ItemButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_n4ob3")
texture_pressed = ExtResource("5_n4ob3")
texture_hover = ExtResource("6_kn2fc")
texture_focused = ExtResource("6_kn2fc")
stretch_mode = 3

[node name="RunButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_ddjs8")
texture_pressed = ExtResource("7_ddjs8")
texture_hover = ExtResource("8_xtv8p")
texture_focused = ExtResource("8_xtv8p")
stretch_mode = 3

[node name="RightEdge" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_f7ntd")
stretch_mode = 3
flip_h = true

[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/ActionButton" to="." method="_on_action_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/ItemButton" to="." method="_on_item_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/RunButton" to="." method="_on_run_button_down"]
